<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uc3mprojects.pablo.ex1aliamate.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masterName"
        android:id="@+id/textView_masterName"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universityName"
        android:id="@+id/textView_universityName"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentName"
        android:id="@+id/textView_studentName"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="10dp"
        />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/ViewSurveyName"
        android:textSize="12dp"
        android:id="@+id/button_ViewSurvey"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:enabled="false" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/StartSurveyName"
        android:textSize="12dp"
        android:id="@+id/button_StartSurvey"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@+id/spinner_agents"
        android:enabled="false" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/AddAgent"
        android:textSize="12dp"
        android:id="@+id/button_AddAgent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button_ViewSurvey"
        android:enabled="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Agent ID"
        android:textSize="12sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_AddAgent"
        android:layout_alignRight="@+id/button_AddAgent"
        android:layout_toEndOf="@+id/button_AddAgent"
        android:layout_toRightOf="@+id/button_AddAgent"
        android:textColor="@color/answer"
        android:backgroundTint="@color/answer"
        android:id="@+id/editText_register_agent_ID"
        android:layout_below="@+id/button_AddAgent"
        android:enabled="false" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="192.168.1.48"
        android:textSize="12sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/answer"
        android:backgroundTint="@color/answer"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/editText_serverIP" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="root"
        android:textSize="12sp"
        android:layout_alignLeft="@+id/editText_serverIP"
        android:layout_below="@+id/editText_serverIP"
        android:textColor="@color/answer"
        android:backgroundTint="@color/answer"
        android:id="@+id/editText_userName" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="EX2ALIAMATE"
        android:textSize="12sp"
        android:layout_alignLeft="@+id/editText_userName"
        android:layout_below="@+id/editText_userName"
        android:textColor="@color/answer"
        android:backgroundTint="@color/answer"
        android:id="@+id/editText_userPass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:textSize="12dp"
        android:id="@+id/button_login"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:layout_above="@+id/button_ViewSurvey"
        android:layout_alignLeft="@+id/button_StartSurvey"
        android:layout_alignRight="@+id/button_StartSurvey"
        android:layout_toEndOf="@+id/button_StartSurvey"
        android:layout_toRightOf="@+id/button_StartSurvey"
        android:layout_marginBottom="0dp"
        android:id="@+id/spinner_agents"
        android:clickable="false" />


</RelativeLayout>
