<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444"
    >

    <!--BUTTONS-->

    <!--Button to activate the camera-->
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"

        app:srcCompat="@drawable/camera_image"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"

        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:id="@+id/imageButton_camera" />
    <!--Button to stop tasting time-->
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"

        app:srcCompat="@drawable/clock"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"

        android:layout_below="@+id/imageButton_camera"
        android:id="@+id/imageButton_clock" />
    <!--Button to save the survey-->
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"

        app:srcCompat="@drawable/save"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"

        android:layout_below="@+id/imageButton_clock"
        android:id="@+id/imageButton_save" />

    <!--IMAGES-->

    <!--To show the image taken-->
    <ImageView
        android:layout_width="70dp"
        android:layout_height="100dp"
        app:srcCompat="@android:drawable/btn_dialog"
        android:id="@+id/imageView_survey_picture"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/imageButton_camera"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        />

    <!--LABELS-->

    <!--Date-->
    <TextView
        android:text="@string/label_date"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView_survey_picture"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/labels"
        android:textStyle="normal|bold"
        android:textSize="10sp"
        android:id="@+id/textView_label_date" />
    <!--Starting Time-->
    <TextView
        android:text="@string/label_startingTime"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView_survey_picture"
        android:layout_alignTop="@+id/textView_label_date"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/labels"
        android:textStyle="normal|bold"
        android:textSize="10sp"
        android:id="@+id/textView_label_starting_time" />
    <!--Tasting Time-->
    <TextView
        android:text="@string/label_tastingTime"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView_survey_picture"
        android:layout_alignTop="@+id/textView_label_starting_time"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/labels"
        android:textStyle="normal|bold"
        android:textSize="10sp"
        android:id="@+id/textView_label_tasting_time" />
    <!--Location-->
    <TextView
        android:text="@string/label_location"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView_survey_picture"
        android:layout_alignTop="@+id/textView_label_tasting_time"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/labels"
        android:textStyle="normal|bold"
        android:textSize="10sp"
        android:id="@+id/textView_label_location" />
    <!--Image-->
    <TextView
        android:text="@string/label_imgGalleryName"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView_survey_picture"
        android:layout_alignTop="@+id/textView_label_location"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/labels"
        android:textStyle="normal|bold"
        android:textSize="10sp"
        android:id="@+id/textView_label_imgGalleryName" />

    <!--VALUES-->

    <!--Date-->
    <TextView
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView_label_date"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/values"
        android:textSize="12sp"
        android:id="@+id/textView_value_date" />
    <!--Starting Time-->
    <TextView
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView_label_starting_time"
        android:layout_alignTop="@+id/textView_label_date"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/values"
        android:textSize="12sp"
        android:id="@+id/textView_value_starting_time" />
    <!--Tasting Time-->
    <TextView
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView_label_tasting_time"
        android:layout_alignTop="@+id/textView_label_starting_time"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/values"
        android:textSize="12sp"
        android:id="@+id/textView_value_tasting_time" />
    <!--Location-->
    <TextView
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView_label_location"
        android:layout_alignTop="@+id/textView_label_tasting_time"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/values"
        android:textSize="12sp"
        android:id="@+id/textView_value_location" />
    <!--Image-->
    <TextView
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView_label_imgGalleryName"
        android:layout_alignTop="@+id/textView_label_location"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/values"
        android:textSize="12sp"
        android:id="@+id/textView_value_imgGalleryName" />

</RelativeLayout>